通用异常处理

--- a/xc-common/pom.xml
+++ b/xc-common/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>xc-common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
